2010-01-11  svu

	* libxklavier/xkl_engine.h, libxklavier/xklavier.c,
	libxklavier/xklavier_private.h: introducing counters for start/stop
	listen operations: in one process (actually g-s-d) start and stop can
	be called several times, with different masks. The API is incompatibly
	changed!
	* configure.in: preparing 4.1 with new API

2009-10-12  svu

	* libxklavier/xklavier_toplevel.c: using transient property for smart
	handling of the popup windows (for the per-window layout scenario).
	Nice idea by Paul Sokolovsky

2009-09-30  svu

	* libxklavier/xklavier_evt.c: ignore BadDrawable error,
	https://bugs.edge.launchpad.net/ubuntu/+source/libxklavier/+bug/404924
	* libxklavier/xklavier_private_xkb.h, libxklavier/xklavier_xkb.c: save
	xinput error code and event type
	* libxklavier/xklavier_evt.c, libxklavier/xklavier_evt_xkb.c,
	libxklavier/xklavier_private.h, libxklavier/xklavier_private_xkb.h,
	libxklavier/xklavier_xkb.c, libxklavier/xklavier_xmm.c: introduced
	engine-specific error handling (for ignoring xinput errors)

2009-08-29  svu

	* libxklavier/xklavier_evt.c: sometimes focus_in arrives when the
	previously focused window is already destroyed. That causes BadMatch
	and all kinds of trouble. The code should handle that case correctly.

2009-08-17  svu

	* libxklavier/xklavier_xkb.c: fixed a bug with XIE check,
	http://bugzilla.gnome.org/show_bug.cgi?id=583709

2009-07-20  svu

	* tests/Makefile.am: a bit of cleanup, thanks Samuli Suominen

2009-07-02  svu

	* libxklavier/xkl_engine.h: small fix for flag enum,
	https://bugs.freedesktop.org/show_bug.cgi?id=21578

2009-06-28  svu

	* libxklavier/xkl_engine.h, reference/tmpl/*: fix small gtk-doc issues
	* NEWS: preparing 4.0

2009-05-06  Sayamindu Dasgupta <sayamindu@laptop.org>

	https://bugs.freedesktop.org/show_bug.cgi?id=21578 - Make use 
	of glib-mkenums
	* libxklavier/Makefile.am: Use glib-mkenums
	* libxklavier/xklavier.c (xkl_engine_class_init): Do not use 